2006-03-25  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* man/zip_source_function.mdoc: fix return values; correct
	argument name. Noted by Tara Milana.

2005-07-20  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* man/zip_source_buffer.mdoc, man/zip_source_file.mdoc,
	man/zip_source_filep.mdoc, man/zip_source_function.mdoc,
	man/zip_source_zip.mdoc: fix return value.

2005-07-17  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* regress/Makefile.am: enable add_from_filep test.
	* regress/add_from_filep.c, regress/add_from_filep.test: new
	testcase.

2005-07-16  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* regress/runtest: fix typo in comment. Do not require args line.
	* regress/fread.c, regress/name_locate.c, regress/open.c,
	regress/fread.test, regress/name_locate.test, regress/open.test,
	regress/Makefile.am: convert remaining tests to new testing
	framework.

2005-07-15  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* regress/Makefile.am: convert for new-style test cases
	* regress/add_from_file.c: add, based on add_from_buffer.c
	* regress/add_from_buffer.c: add, based on buffadd.c.
	* regress/buffadd.c: removed.
	* regress/runtest: add, based on ckmame's

2005-07-14  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* compile, depcomp, install-sh, missing, mkinstalldirs: update
	from automake-1.9.6.

	* configure.ac: bump version to 0.6.1

	* lib/zip_fread.c (zip_fread): remove unsigned.

2005-07-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip.h: make usable from C++. Patch from Heiko Hund.

2005-07-05  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* libzip.pc.in (zipcmp): Fix path to zipcmp.

2005-06-18  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* lib/zip_close.c, lib/zip_dirent.c, lib/zip_fread.c,
	lib/zipint.h, src/zipcmp.c: fix some warnings with -Wsign-compare.

	* configure.ac, man/Makefile.am: smarter man page installation
	handling, avoiding symlinks.

2005-06-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>
