@@ -1,7 +1,7 @@
-.\" $NiH: zip_stat.mdoc,v 1.9 2005/06/09 21:13:12 wiz Exp $
+.\" $NiH: zip_stat.mdoc,v 1.10 2005/06/09 21:14:54 wiz Exp $
 .\"
 .\" zip_stat.mdoc -- get information about file
-.\" Copyright (C) 2003, 2004, 2005 Dieter Baron and Thomas Klausner
+.\" Copyright (C) 2003, 2004, 2005, 2006 Dieter Baron and Thomas Klausner
 .\"
 .\" This file is part of libzip, a library to manipulate ZIP archives.
 .\" The authors can be contacted at <nih@giga.or.at>
@@ -31,7 +31,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd June 9, 2005
+.Dd April 9, 2006
 .Dt ZIP_STAT 3
 .Os
 .Sh NAME
@@ -84,6 +84,7 @@ struct zip_stat {
     time_t mtime;			/* modification time */
     unsigned int comp_size;		/* size of file (compressed) */
     unsigned short comp_method;		/* compression method used */
+    unsigned short encryption_method;	/* encryption method used */
 };
 .Sh RETURN VALUES
 Upon successful completion 0 is returned.
